--- a/Basic_Evals_Testing.ipynb
+++ b/Basic_Evals_Testing.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOzRaGdXoog8Rn5fq57KW3r",
+      "authorship_tag": "ABX9TyMfRYrilc/NmEPlK8uI/SoG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +52,10 @@
         "#Racial Bias - Offensive Language\n",
         "#WEAT\n",
         "#Fact Checking Algos\n",
-        "#Burstiness"
+        "#Burstiness\n",
+        "\n",
+        "#dot product for vector similarity - considers both direction and magnitude of vectors\n",
+        "#cosine simiarity - considers only direction or angle between two vectors"
       ]
     },
     {
@@ -1159,6 +1162,44 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Section for which LLM to use\n",
+        "!pip install weave openai"
+      ],
+      "metadata": {
+        "id": "3zMsFwbi6J5S"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import weave\n",
+        "weave.init(\"rag-baselining\")\n",
+        "import os\n",
+        "from google.colab import userdata\n",
+        "# Access the API key from Colab's secrets manager\n",
+        "openai_api_key = userdata.get(\"OPENAI_API_KEY\")\n",
+        "wandb_key = userdata.get(\"WANDB_API_KEY\")"
+      ],
+      "metadata": {
+        "id": "2WZ5y2NDaYTA"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "N06PlogfwWGo"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
