--- a/Handlingclassimbalance.ipynb
+++ b/Handlingclassimbalance.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOWmYkh9aiuUehNju1ZBDvy",
+      "authorship_tag": "ABX9TyM06U+5KHidcfG8siLSfaQ3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -210,6 +210,37 @@
       ],
       "metadata": {
         "id": "4DOu9qzc1F3E"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#RFE is leveraging models to determine which set of features are most important - in our case in MMM models we used Lasso to do RFE and then used the features in Ridge Regression\n",
+        "#Rationale for using RFE is we need to have better accuracy of models with righ features else you have 200 data points\n",
+        "#another technique that we used for FE is Correlation between two Covariates and also tested correlation between depdendent and independent variables\n",
+        "#Regression is used to model a linear relationship between dependent and independent\n",
+        "#Sales is time series data and data points are time series data\n",
+        "#glm - - diff is constrained - UB and LB and then use LGBFS to get to tehe coeff\n",
+        "#PYMC3 - Hirearchial - is used when you have National Level Spends and you want to measure the impact of that on DMA level and that can't exceed a certain limit\n",
+        "#so that is where the usage comes of these models\n",
+        "#TTFN are CF .... and are ID based .... and hence to handle cold start (when user or item is new)\n",
+        "#the way to handle is map these new users and items to a bucket and that solves - Real Time Recomm Models\n",
+        "#Built Next Best Action Recommendation Engine leveraging Two Tower Neural Networks, resulting to 20% uptick in revenue for the Retail and Banking customer\n",
+        "#Retrieval Model was batch - generate embeddings and store them in VDB and Index - using FAISS - Bi Encoder\n",
+        "#Ranking is online inference - where you rank based on user features\n",
+        "#Niche of model is - leveraging customer sequence , comments as ranker.... and we use cross feature interactions  to caluate nuances of item and user interaction\n",
+        "#Demand Sensing and Forecasting for a CPG Brand - Soap Category . Signals used were - relatively stable category ....\n",
+        "#DF - batch base for every month we do\n",
+        "#DS - Orders data (demand) -> Dependent is Demand/ Orders -> : CPG on Amazon\n",
+        "#1)Price , Trade Data (0-2% , 2-5% ,>5%) , Marketing Promo(run a campain y/n) . Comp Price, Comp offer. Positive . Negative Sentiments on the product (1/0)\n",
+        "#Tertiray Sales data (POS sales data from Amazon)\n",
+        "#inventory data (supply)\n",
+        "#\n"
+      ],
+      "metadata": {
+        "id": "sEdaETIElxdz"
       },
       "execution_count": null,
       "outputs": []
