--- a/Handlingclassimbalance.ipynb
+++ b/Handlingclassimbalance.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM06U+5KHidcfG8siLSfaQ3",
+      "authorship_tag": "ABX9TyMUj7pG5VHcGhBcwJMoY/25",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -233,9 +233,10 @@
         "#Niche of model is - leveraging customer sequence , comments as ranker.... and we use cross feature interactions  to caluate nuances of item and user interaction\n",
         "#Demand Sensing and Forecasting for a CPG Brand - Soap Category . Signals used were - relatively stable category ....\n",
         "#DF - batch base for every month we do\n",
-        "#DS - Orders data (demand) -> Dependent is Demand/ Orders -> : CPG on Amazon\n",
+        "#DS -\n",
+        "# dependent data - >Orders data (demand) -> Dependent is Demand/ Orders -> : CPG on Amazon\n",
         "#1)Price , Trade Data (0-2% , 2-5% ,>5%) , Marketing Promo(run a campain y/n) . Comp Price, Comp offer. Positive . Negative Sentiments on the product (1/0)\n",
-        "#Tertiray Sales data (POS sales data from Amazon)\n",
+        "#2)Tertiray Sales data (POS sales data from Amazon)\n",
         "#inventory data (supply)\n",
         "#\n"
       ],
