--- a/Handlingclassimbalance.ipynb
+++ b/Handlingclassimbalance.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMUj7pG5VHcGhBcwJMoY/25",
+      "authorship_tag": "ABX9TyOklosRfM5MqcG/dHzX/8mA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -233,11 +233,19 @@
         "#Niche of model is - leveraging customer sequence , comments as ranker.... and we use cross feature interactions  to caluate nuances of item and user interaction\n",
         "#Demand Sensing and Forecasting for a CPG Brand - Soap Category . Signals used were - relatively stable category ....\n",
         "#DF - batch base for every month we do\n",
-        "#DS -\n",
-        "# dependent data - >Orders data (demand) -> Dependent is Demand/ Orders -> : CPG on Amazon\n",
+        "#DS - Orders data (demand) -> Dependent is Demand/ Orders -> : CPG on Amazon\n",
         "#1)Price , Trade Data (0-2% , 2-5% ,>5%) , Marketing Promo(run a campain y/n) . Comp Price, Comp offer. Positive . Negative Sentiments on the product (1/0)\n",
         "#2)Tertiray Sales data (POS sales data from Amazon)\n",
-        "#inventory data (supply)\n",
+        "#3)Inventory data (supply)\n",
+        "#4)Retail inflation\n",
+        "#5)Seasonality , Holidays , Trends , Cyclicity is key part ... you take these things out .... detrend , deseasonlize the time series , holidays etc...., Summers etc..\n",
+        "#6)XGBoost Regression Model - why ? - accuracy\n",
+        "#7)Autocorrelartion - acf and pacf plot ....\n",
+        "#took last two years data for forecasting\n",
+        "#time window split for CV of model\n",
+        "#predicted demand T+7 and T+15 to align to manufacturing cycle\n",
+        "#models were refreshed evey week as planning cycle for fortnightly\n",
+        "#amazon data streams were available on daily basis\n",
         "#\n"
       ],
       "metadata": {
