--- a/Handlingclassimbalance.ipynb
+++ b/Handlingclassimbalance.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOklosRfM5MqcG/dHzX/8mA",
+      "authorship_tag": "ABX9TyOep+dOSYthtyzgf22+/0ku",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -217,6 +217,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#FE - Correlation , RFE ,\n",
         "#RFE is leveraging models to determine which set of features are most important - in our case in MMM models we used Lasso to do RFE and then used the features in Ridge Regression\n",
         "#Rationale for using RFE is we need to have better accuracy of models with righ features else you have 200 data points\n",
         "#another technique that we used for FE is Correlation between two Covariates and also tested correlation between depdendent and independent variables\n",
@@ -239,14 +240,22 @@
         "#3)Inventory data (supply)\n",
         "#4)Retail inflation\n",
         "#5)Seasonality , Holidays , Trends , Cyclicity is key part ... you take these things out .... detrend , deseasonlize the time series , holidays etc...., Summers etc..\n",
-        "#6)XGBoost Regression Model - why ? - accuracy\n",
+        "#Fourier Transform for cyclicity\n",
+        "#price impact as leading indicators\n",
+        "#holidays\n",
+        "#seasonality - wow seasonality calc - calculated separately ... trend calculated seprately and to make time series stationry we use differencing\n",
+        "#6)XGBoost Regression Model - why ? - accuracy - additive model\n",
         "#7)Autocorrelartion - acf and pacf plot ....\n",
         "#took last two years data for forecasting\n",
         "#time window split for CV of model\n",
         "#predicted demand T+7 and T+15 to align to manufacturing cycle\n",
         "#models were refreshed evey week as planning cycle for fortnightly\n",
         "#amazon data streams were available on daily basis\n",
-        "#\n"
+        "#metrics is RMSE , MAPE\n",
+        "#exponential smoothing to handle seasonality and trends\n",
+        "#we used XGBoost as it was we wanted to have more accuracy .... we compared various methods . used stats - holtwinters etc...\n",
+        "#Exogenous variables .... and hence XGBoost\n",
+        "\n"
       ],
       "metadata": {
         "id": "sEdaETIElxdz"
