--- a/Handlingclassimbalance.ipynb
+++ b/Handlingclassimbalance.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOep+dOSYthtyzgf22+/0ku",
+      "authorship_tag": "ABX9TyPybss+UW8eAvhlNhZU1EP9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -217,7 +217,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#FE - Correlation , RFE ,\n",
+        "#FE - Correlation with dependent , RFE ...\n",
         "#RFE is leveraging models to determine which set of features are most important - in our case in MMM models we used Lasso to do RFE and then used the features in Ridge Regression\n",
         "#Rationale for using RFE is we need to have better accuracy of models with righ features else you have 200 data points\n",
         "#another technique that we used for FE is Correlation between two Covariates and also tested correlation between depdendent and independent variables\n",
@@ -254,8 +254,7 @@
         "#metrics is RMSE , MAPE\n",
         "#exponential smoothing to handle seasonality and trends\n",
         "#we used XGBoost as it was we wanted to have more accuracy .... we compared various methods . used stats - holtwinters etc...\n",
-        "#Exogenous variables .... and hence XGBoost\n",
-        "\n"
+        "#Exogenous variables .... and hence XGBoost"
       ],
       "metadata": {
         "id": "sEdaETIElxdz"
