--- a/moviepredictionusingDCNv2.ipynb
+++ b/moviepredictionusingDCNv2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMgfXKoDKVF5cComwfmoUaN",
+      "authorship_tag": "ABX9TyORj8dkx0HIxvo5yf/CZ/gg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,9 @@
     {
       "cell_type": "code",
       "source": [
-        "#Deep and Cross Networks"
+        "#Deep and Cross Networks for ranking in recommender systems\n",
+        "#cross network stacked on deep network\n",
+        "#deep network"
       ],
       "metadata": {
         "id": "cCtJFqEoLzj_"
@@ -133,6 +135,8 @@
         "\n",
         "class DCNv2(nn.Module):\n",
         "    def __init__(self, feature_dims, embedding_dim=16, num_cross_layers=3, deep_layers=[512, 256, 128]):\n",
+        "      #first hidden layer of dimension 512 , seocnd 256 and third with 128\n",
+        "      #3 cross layers\n",
         "        super(DCNv2, self).__init__()\n",
         "\n",
         "        # Embedding layers for each feature\n",
