--- a/Handlingclassimbalance.ipynb
+++ b/Handlingclassimbalance.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOYDVX6wYONiNlmsEwXZZ5x",
+      "authorship_tag": "ABX9TyN3lQNCIkAJNk601hBKRagK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -265,8 +265,9 @@
     {
       "cell_type": "code",
       "source": [
-        "#bootstrapping for CI for regression model\n",
-        "#boot strapping with replacement"
+        "#bootstrapping for CI for Classification model\n",
+        "#boot strapping with replacement\n",
+        "#boot strapping is used to estimate true value (mean , SD or Variance) of a population parameter"
       ],
       "metadata": {
         "id": "R1FawqGbPcac"
@@ -296,12 +297,13 @@
         "for i in range(n_iterations):\n",
         "  train = resample(values, n_samples=n_size)\n",
         "  test = np.array([x for x in values if x.tolist() not in train.tolist()])\n",
-        "  #fit model\n",
+        "  #fit model #running classifier 100 times\n",
         "  model = DecisionTreeClassifier()\n",
         "  #train the model\n",
         "  model.fit(train[:,:-1], train[:,-1])\n",
         "  #evaluate model\n",
         "  predictions = model.predict(test[:,:-1])\n",
+        "  #statistics of interest for CI is model accuracy score\n",
         "  score = accuracy_score(test[:,-1], predictions)\n",
         "  #print(score)\n",
         "  stats.append(score)\n",
@@ -325,7 +327,7 @@
           "height": 448
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -345,6 +347,72 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#bootstrapping for CI for regression  model\n",
+        "#boot strapping with replacement"
+      ],
+      "metadata": {
+        "id": "AzpBR-3-ZKGp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import statsmodels.api as sm\n",
+        "\n",
+        "#1.Generate sample data\n",
+        "np.random.seed(42)\n",
+        "n_samples = 100\n",
+        "X = np.random.rand(n_samples,1) *10 #independent variable\n",
+        "true_beta_0 = 2 # true intercept\n",
+        "true_beta_1 = 0.5 #true slope\n",
+        "y = true_beta_0 + true_beta_1 * X + np.random.normal(0,1,n_samples)\n",
+        "\n",
+        "X_const = sm.add_constant(X)\n",
+        "#2. Define no of bootstrap samples\n",
+        "n_bootstraps = 1000\n",
+        "#3.Intialize a list to store the bootstrapped regression coeff\n",
+        "boot_coeffs_list = []\n",
+        "\n",
+        "#3. Start bootstrapping\n",
+        "for i in range(n_bootstraps):\n",
+        "    #resample with replacement\n",
+        "    indices = np.random.choice(n_samples, n_samples, replace = True)\n",
+        "\n",
+        "    #create bootstrapped samples\n",
+        "    X_bootstrap = X_const[indices]\n",
+        "    y_bootstrap = y[indices]\n",
+        "\n",
+        "    model_boot = sm.OLS(y_bootstrap,X_bootstrap).fit()\n",
+        "    boot_coeffs_list.append(model_boot.params)\n",
+        "\n",
+        "# Convert the list of coefficients to a NumPy array\n",
+        "boot_coeffs = np.array(boot_coeffs_list)\n",
+        "\n",
+        "# Calculate confidence intervals for the coefficients\n",
+        "alpha = 0.95\n",
+        "p = ((1 - alpha) / 2) * 100\n",
+        "lower_bounds = np.percentile(boot_coeffs, p, axis=0)\n",
+        "p = (alpha + (1 - alpha) / 2) * 100\n",
+        "upper_bounds = np.percentile(boot_coeffs, p, axis=0)\n",
+        "\n",
+        "# Print the confidence intervals\n",
+        "print(f\"{alpha*100:.1f}% Confidence Intervals for Regression Coefficients:\")\n",
+        "print(f\"Intercept: [{lower_bounds[0].item():.4f}, {upper_bounds[0].item():.4f}]\")\n",
+        "print(f\"Slope: [{lower_bounds[1].item():.4f}, {upper_bounds[1].item():.4f}]\")"
+      ],
+      "metadata": {
+        "id": "4PYL3yFqZOyv"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
