--- a/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
+++ b/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPCivjTLphUGxvyOjp9cszZ",
+      "authorship_tag": "ABX9TyMLrUKH1eyHkEHv+79Tt05L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -977,6 +977,92 @@
       "metadata": {
         "id": "sp0ba1G8uspn"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#RLHF CODE - GET THE BASICS RIGHT\n",
+        "#dataset roneneldan/TinyStories\n",
+        "!git clone https://github.com/karpathy/mingpt.git\n",
+        "%cd mingpt\n",
+        "!pip install .\n",
+        "!pip install nltk\n",
+        "nltk.download('vader_lexicon')"
+      ],
+      "metadata": {
+        "id": "KrFqxl5Xby9_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import copy , os , datasets , torch , nltk\n",
+        "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
+        "from torch.utils.data import Dataset\n",
+        "from torch.utils.data.dataloader import DataLoader\n",
+        "\n",
+        "import sys\n",
+        "# Install mingpt using pip\n",
+        "!pip install mingpt\n",
+        "\n",
+        "from mingpt.model import GPT\n",
+        "#from mingpt.char_tokenizer import CharTokenizer\n",
+        "#from mingpt.logger import Logger\n",
+        "from mingpt.model import GPT\n",
+        "from mingpt.trainer import Trainer\n",
+        "from mingpt.utils import set_seed"
+      ],
+      "metadata": {
+        "id": "maOJCAZPk1Y0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Char tokenizer file\n",
+        "import torch\n",
+        "class CharTokenizer():\n",
+        "  pad_char = \"-\"\n",
+        "  eot_char = \"⏎\"\n",
+        "  def __init__(self,data):\n",
+        "    chars = sorted(list(set(data)) | {self.pad_char , self.eot_char})\n",
+        "    data_size , vocab_size = len(data) , len(chars)\n",
+        "    print(\"data has %d characters , %d unique\" % (data_size,vocab_size))\n",
+        "    self.stoi = {ch:i for i,ch in enumerate(chars)}\n",
+        "    self.itos = {i:ch for i,ch in enumerate(chars)}\n",
+        "    self.vocab_size = vocab_size\n",
+        "    self.pad_token = self.stoi[self.pad_char]\n",
+        "    self.eot_token = self.stoi[self.eot_char]\n",
+        "\n",
+        "  def __call__(self, text:str) ->torch.LongTensor:\n",
+        "    return torch.LongTensor([self.stoi[c] for c in text if c in self.stoi], dtype = torch.long)\n",
+        "  def decode(self, tokens ,ignore_padding = False) ->str:\n",
+        "    return \"\".join([self.itos[i] for i in tokens.tolist() if i in self.itos and not ignore_padding or i != self.pad_token])\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "jWQFFVmqr1wo"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class StoryDataset(Dataset):\n",
+        "  \"\"\" Ti\"\"\""
+      ],
+      "metadata": {
+        "id": "H0MG8KE2meWr"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
