--- a/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
+++ b/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMLrUKH1eyHkEHv+79Tt05L",
+      "authorship_tag": "ABX9TyOK/PDGJW5gh6JIsNsfUGAG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -986,8 +986,7 @@
         "!git clone https://github.com/karpathy/mingpt.git\n",
         "%cd mingpt\n",
         "!pip install .\n",
-        "!pip install nltk\n",
-        "nltk.download('vader_lexicon')"
+        "!pip install nltk\n"
       ],
       "metadata": {
         "id": "KrFqxl5Xby9_"
@@ -1028,12 +1027,13 @@
         "class CharTokenizer():\n",
         "  pad_char = \"-\"\n",
         "  eot_char = \"⏎\"\n",
+        "\n",
         "  def __init__(self,data):\n",
-        "    chars = sorted(list(set(data)) | {self.pad_char , self.eot_char})\n",
+        "    chars = sorted(list(set(data) | {self.pad_char, self.eot_char})) # creating vocab of all unique characters\n",
         "    data_size , vocab_size = len(data) , len(chars)\n",
         "    print(\"data has %d characters , %d unique\" % (data_size,vocab_size))\n",
-        "    self.stoi = {ch:i for i,ch in enumerate(chars)}\n",
-        "    self.itos = {i:ch for i,ch in enumerate(chars)}\n",
+        "    self.stoi = {ch:i for i,ch in enumerate(chars)} #string to integer\n",
+        "    self.itos = {i:ch for i,ch in enumerate(chars)} #integer to string\n",
         "    self.vocab_size = vocab_size\n",
         "    self.pad_token = self.stoi[self.pad_char]\n",
         "    self.eot_token = self.stoi[self.eot_char]\n",
@@ -1041,22 +1041,171 @@
         "  def __call__(self, text:str) ->torch.LongTensor:\n",
         "    return torch.LongTensor([self.stoi[c] for c in text if c in self.stoi], dtype = torch.long)\n",
         "  def decode(self, tokens ,ignore_padding = False) ->str:\n",
-        "    return \"\".join([self.itos[i] for i in tokens.tolist() if i in self.itos and not ignore_padding or i != self.pad_token])\n",
-        "\n",
-        "\n",
-        "\n"
+        "    return \"\".join([self.itos[i] for i in tokens.tolist() if i in self.itos and not ignore_padding or i != self.pad_token])"
       ],
       "metadata": {
         "id": "jWQFFVmqr1wo"
       },
-      "execution_count": 5,
+      "execution_count": 16,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "class StoryDataset(Dataset):\n",
-        "  \"\"\" Ti\"\"\""
+        "  \"\"\"TinyStories Dataset https://huggingface.co/datasets/roneneldan/TinyStories\"\"\"\n",
+        "\n",
+        "  def __init__(self,block_size, split=\"train\",filter_sentiment= None , tokenizer = None):\n",
+        "    super().__init__()\n",
+        "    self.block_size = block_size\n",
+        "    self.split = split\n",
+        "    self.filter_sentiment = filter_sentiment\n",
+        "    self.tokenizer = tokenizer\n",
+        "    eot_char = \"⏎\"\n",
+        "\n",
+        "    #helper function to process and chunk the text examples\n",
+        "    def chunk_examples(examples):\n",
+        "      chunks = [(eot_char+text+eot_char) for text in examples['text'] if len(text)>0]\n",
+        "      return {\"content\":chunks}\n",
+        "      print(f\"Loading TinyStories dataset for split:{split}\")\n",
+        "    dataset = datasets.load_dataset(\"roneneldan/TinyStories\",split = split)\n",
+        "\n",
+        "    #filter the dataset for by sentiment for SFT\n",
+        "    if filter_sentiment:\n",
+        "      sid = SentimentIntensityAnalyzer()\n",
+        "      def is_positive(example):\n",
+        "        return sid.polarity_scores(example['text'])['compound'] > 0.5\n",
+        "      if filter_sentiment == \"positive\":\n",
+        "        dataset = dataset.filter(is_positive)\n",
+        "      else:\n",
+        "        pass\n",
+        "    self.dataset = dataset.map(chunk_examples , batched= True , remove_columns = dataset.column_names)\n",
+        "\n",
+        "    #intialize tokenizer\n",
+        "    if self.tokenizer is None:\n",
+        "      print(\"Building a new tokenizer\")\n",
+        "      token_text_example = \"\".join(row[\"content\"] for row in self.dataset.select(range(10000)))\n",
+        "      self.tokenizer = CharTokenizer(token_text_example)\n",
+        "      print(\"Tokenizer built\")\n",
+        "\n",
+        "def get_vocab_size(self):\n",
+        "  return self.tokenizer.vocab_size\n",
+        "def get_block_size(self):\n",
+        "  return self.block_size\n",
+        "def __len__(self):\n",
+        "  return len(self.dataset)\n",
+        "def __getitem__(self,idx):\n",
+        "  chunk = self.dataset[idx][\"content\"]\n",
+        "  tokens = self.tokenizer(chunk)\n",
+        "  assert(len(tokens)) >0\n",
+        "  if len(tokens) >=self.block_size +1:\n",
+        "    toks = tokens[:self.block_size+1]\n",
+        "  else:\n",
+        "    pad = torch.full((self.block_size+1,),self.tokenizer.pad_token , dtype = torch.long)\n",
+        "    pad[:len(tokens)] = tokens # Use 'tokens' instead of 'toks'\n",
+        "    toks = pad\n",
+        "  x = toks[:-1]\n",
+        "  y = toks[1:].clone() #creating target label sequence by shifting the intial sequence by 1\n",
+        "  y[y==self.tokenizer.pad_token] = -1 # masks padding in the target\n",
+        "\n",
+        "  #our mask is true for padding / unused tasks\n",
+        "  #to match the causal masking inside the miniGPT model\n",
+        "  attn_mask = x ==self.tokenizer.pad_token #attention should not be paid to pad_token\n",
+        "  return x, y ,attn_mask #returns input , output and attn_mask\n",
+        "\n",
+        "class SentimentRewardModel():\n",
+        "  def __init__(self,tokenizer):\n",
+        "    self.tokenizer = tokenizer\n",
+        "    self.sid = SentimentIntensityAnalyzer()\n",
+        "  def sentiment(self,sentence:str) ->float:\n",
+        "    #retun a \"compound\" score which is normalized , weighted composite sentiment score\n",
+        "    return self.sid.polarity_scores(sentence)['compound']\n",
+        "  def __call__(self,tokens):\n",
+        "    bs = tokens.shape[0]\n",
+        "    rewards = torch.zeros(bs)\n",
+        "    for i in range(bs):\n",
+        "      #decode the tokens back into a sequence\n",
+        "      sentence = self.tokenizer.decode(tokens[i])\n",
+        "      #calculate the sentiment score for the decoded sentence\n",
+        "      rewards[i] = self.sentiment(sentence)\n",
+        "    return rewards.to(tokens.device)\n",
+        "\n",
+        "def batch_end_callback(trainer, train_ds, valid_loader, TEST_PROMPT):\n",
+        "  model = trainer.model\n",
+        "  model.eval()\n",
+        "  if trainer.iter_num % 100 == 0:\n",
+        "    print(f\"iter_dt {trainer.iter_dt * 1000:.2f}ms; iter {trainer.iter_num}: train loss {trainer.loss.item():.5f}\")\n",
+        "    with torch.nograd():\n",
+        "      total_loss = 0\n",
+        "      for i , batch in enumerate(valid_loader):\n",
+        "        x,y, mask = [x.to(trainer.device) for x in batch]\n",
+        "        logits , loss = model(x,y,attention_mask = mask)\n",
+        "        total_loss +=loss.item()\n",
+        "    val_loss = total_loss/(i+1)\n",
+        "    print(f\"iter {trainer.iter_num}: val loss {val_loss:.5f}\")\n",
+        "  if trainer.iter_num % trainer.config.generate_every == 0:\n",
+        "    with torch.nograd():\n",
+        "      context = train_ds.tokenizer(TEST_PROMPT)[None]\n",
+        "      x = context.to(trainer.device)\n",
+        "      y = model.generate(x,140,temperature = 1.0 , do_sample= True,top_k=20)[0]\n",
+        "      completion = train_ds.tokenizer.decode(y)\n",
+        "  model.train()\n",
+        "if __name__ == '__main__':\n",
+        "  set_seed(42)\n",
+        "  TEST_PROMPT =  \"⏎Once upon a time, \"\n",
+        "  block_size = 64\n",
+        "  print(\"===== STARTING PRETRAINING on TinyStories =====\")\n",
+        "  #intialize datasets\n",
+        "  train_ds = StoryDataset(block_size , split = \"train\")\n",
+        "  valid_ds = StoryDataset(block_size , split = \"validation\")\n",
+        "  end_of_text = train_ds.tokenizer.eot_token\n",
+        "\n",
+        "  #model configuration\n",
+        "  model_config = GPT.get_default_config()\n",
+        "  model_config.model_type = \"gpt-micro\"\n",
+        "  model_config.vocab_size = train_ds.get_vocab_size()\n",
+        "  model_config.block_size = block_size\n",
+        "  model = GPT(model_config)\n",
+        "\n",
+        "\n",
+        "  # Trainer Configuration\n",
+        "  train_config = Trainer.get_default_config()\n",
+        "  train_config.learning_rate = 5e-4 # Slightly adjusted learning rate\n",
+        "  train_config.num_workers = 4 # Use more workers if your machine supports it\n",
+        "  train_config.log_every = 2000\n",
+        "  train_config.generate_every = 5000\n",
+        "  # TinyStories is huge, so 1 epoch is already a lot of training\n",
+        "  train_config.epochs = 1\n",
+        "  train_config.compile = True # Use torch.compile for a speedup if available\n",
+        "  train_config.batch_size = 128 # Increase batch size if GPU memory allows\n",
+        "\n",
+        "  trainer = Trainer(train_config, model, train_ds)\n",
+        "  device = trainer.device\n",
+        "\n",
+        "  valid_loader = DataLoader(\n",
+        "      valid_ds,\n",
+        "      shuffle=False,\n",
+        "      batch_size=train_config.batch_size*2,\n",
+        "      num_workers=train_config.num_workers,\n",
+        "  )\n",
+        "  trainer.set_callback(\"on_batch_end\", lambda trainer: batch_end_callback(trainer, train_ds, valid_loader, TEST_PROMPT))\n",
+        "  trainer.run()\n",
+        "  print(\"\\n===== DONE PRETRAINING =====\")\n",
+        "\n",
+        "  # Save the pretrained model\n",
+        "  print(\"\\n===== SAVING PRETRAINED MODEL =====\")\n",
+        "  pretrained_ckpt_path = os.path.join(os.path.curdir, \"story_gpt_pretrained.pt\")\n",
+        "  torch.save(model.state_dict(), pretrained_ckpt_path)\n",
+        "  print(\"\\n===== DONE SAVING =====\")\n",
+        "\n",
+        "  #generate a sample after pretraining\n",
+        "  sample_prompt = torch.full((3,1),end_of_text,dtype = torch.long,device = device)\n",
+        "  idx = model.generate(sample_prompt, max_new_tokens = 80,top_k=30, do_sample = True)\n",
+        "  for j , generation in enumerate(idx):\n",
+        "    print(f\"Pre Trained Generation {j+1}:\", train_ds.tokenizer.decode(generation))\n",
+        "\n",
+        "\n",
+        "  print(\"\\n===== STARTING SUPERVISED FINE-TUNING (SFT) =====\")"
       ],
       "metadata": {
         "id": "H0MG8KE2meWr"
